# PaxDei-Planner

./: README.md  bootstrap.py  executor.py  executor_config.json  generate_profile.py  pyproject.toml  run_web_validation.py  scan_keys.py  temp_inspect.py  tempview.txt  xp_tables_config.json
config/: executor_config.json  materials_config.json  player_profile.json  xp_tables_config.json
planner/: cli.py  costs.py  data_loader.py  generate_xp_tables.py  level_planner.py  planner.py  schemas.py  skills.py  xp_model.py
planner/data/: player_profile.json
source_data/localisation/: localisation_en.json
src/paxdei_planner/: cli.py  data_loader.py  generate_xp_tables.py  level_planner.py  planner.py  report.py  schemas.py  skills.py  xp_model.py
src/paxdei_ui/: __init__.py  app.py  config_store.py  icon_loader.py  paths.py  plan_service.py  snapshot_store.py  widgets.py
tests/: test_single_planner.py
utils/: generate_profile.py  generate_xp_tables.py  recipes.txt  regenerate_assets.py  scan_keys.py  validate_against_web.py  web_golden_fetch_json.py
utils/golden_json_cache/: recipe_activatable_foodcooked_bread_hpregen_10.json  recipe_activatable_foodcooked_bread_hpregen_20.json  recipe_activatable_foodcooked_bread_hpregen_28.json  recipe_activatable_foodcooked_bread_hpregen_3.json  recipe_activatable_foodcooked_bread_hpregen_44.json  recipe_activatable_foodcooked_bread_hpregen_54.json  recipe_activatable_foodcooked_bread_maxhp_47.json  recipe_activatable_foodcooked_bread_maxhp_7.json  (+287 more)
xp_tables/: xp_tables_index.csv
(+1437 files in other folders)
