[project]
name = "paxdei-leveling-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32.5",
    "pillow>=11.0.0",
    "pyside6>=6.7.2",
]

[project.scripts]
paxdei-planner = "paxdei_planner.cli:main"
paxdei-planner-ui = "paxdei_ui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
